<resources>
    <!-- Splash &amp;-->
    <string name="app_name">Circular Chain</string>
    <string name="slogan_one">Empowering Sustainable Consumer Choices</string>

    <string name="privacypolicy">By Creating an account with Circular Chain, you agree to our <font color='#6698FF'> Privacy Policy</font> and <font color='#6698FF'> Terms of Service</font></string>
    <string name="continuewithGoogle">Continue with Google</string>

    <!-- Create Profile -->
    <string name="createuserprofile">Create User Profile</string>
    <string name="entername">Enter your Name</string>
    <string name="finish">Finish</string>
    <string name="name_party">%d, %s</string>
    <string name="create_account">Create Account</string>

    <string name="cover_image">Cover Image</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="select_education_level">Select Education Level</string>
    <string name="select_your_date_of_birth">Select your Date of Birth</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="get_started">Get Started</string>
    <string name="summary_one">Bringing Supply Chain Traceability and Sustainability to your Palm</string>
    <string name="summary_two"> Save Time and Money by identifying Credible Local Partners that match your needs </string>
    <string name="_100_000_cusd">100,000 cUSD</string>
    <string name="message">Message</string>
    <string name="gsgyhsus76bs">GSGYHSUS76BS</string>
    <string name="_25_000">25,000</string>
    <string name="mon_13_february_2021">Mon, 13 February 2021</string>
    <string name="accept">Accept</string>
    <string name="dismiss">Dismiss</string>
    <string name="_4_min">4 min</string>
    <string name="enter_message">Enter Message</string>
    <string name="savings_group_chat">Savings Group Chat</string>
    <string name="listing_agent">Listing Agent</string>
    <string name="save_for_this_investment">Save for this Investment</string>
    <string name="description">Description</string>
    <string name="nairobi_area_kenya">Nairobi Area, Kenya</string>
    <string name="kes_20000">KES 20000</string>
    <string name="group_chat">Group Chat</string>
    <string name="create_listing">Create Listing</string>
    <string name="enter_listing_name">Enter Listing Name</string>
    <string name="enter_listing_summary">Enter Listing Summary</string>
    <string name="enter_listing_cost">Enter Listing Cost</string>
    <string name="enter_listing_location">Enter Listing Location</string>
    <string name="select_listing_category">Select Listing Category</string>
    <string name="publish">Publish</string>
    <string name="join_savings_group">Join Savings Group</string>
    <string name="we_are_investing_in">We are Investing In</string>
    <string name="create_savings_group">Create Savings Group</string>
    <string name="enter_sacco_name">Enter Sacco Name</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_group_summary">Enter Group Summary</string>
    <string name="savings_group_goal">Savings Group Goal</string>
    <string name="invite_members">Invite Members</string>
    <string name="create_user_profile">Create User Profile</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="select_work_industry">Select Work Industry</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="create_saving_group_for_this_investment">Create Saving Group for this Investment</string>
    <string name="chats">Chats</string>
    <string name="saving_groups">Saving Groups</string>
    <string name="notifications">Notifications</string>
    <string name="investments">Investments</string>
    <string name="savings_group">Savings Group</string>
    <string name="create_financial_literacy_article">Create Financial Literacy Article</string>
    <string name="enter_article_title">Enter Article Title</string>
    <string name="enter_article_summary">Enter Article Summary</string>
    <string name="enter_article_content">Enter Article Content</string>
    <string name="scan_with_chama_ke_app">Scan with Chama KE App</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="status">Status</string>
    <string name="sent_to">Sent To</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="_20_jan_2022">20/Jan/2022</string>
    <string name="_10_30_45">10:30:45</string>
    <string name="payment_receipt">Payment Receipt</string>
    <string name="savings_group_deposit">Savings Group Deposit</string>
    <string name="transaction_reference">TYUOUNDN67993</string>
    <string name="available">Available</string>
    <string name="bought">Bought</string>
    <string name="invite">Invite</string>
    <string name="invited">Invited</string>
    <string name="selected">Selected</string>
    <string name="deposit">Deposit</string>
    <string name="select_investment">Select Investment</string>
    <string name="select">Select</string>
    <string name="deposit_money">Deposit Money</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify_account">Verify Account</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="enter_code_sent_to">Enter Code Sent To</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="get_otp_code">Get OTP Code</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="we_will_send_you_a_one_time_password_on_this_number">We will send you a One Time Password on this Number</string>
    <string name="paste_your_celo_account_address">Paste your CELO Account Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_brands">Brands</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_engagement_rules">Engagement Rules</string>

    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <product-root>/docs/cast_styled_receiver -->
    <string name="home_title">Home</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <!-- About &amp;-->
    <string name="allrightsreserved">&#169; Local Connect 2021 All Rights Reserved.</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="visit">Visit</string>
    <string name="highlights">Highlights</string>
    <string name="clicks">Clicks</string>
    <string name="_0">0</string>
    <string name="views">Views</string>
    <string name="reach">Reach</string>
    <string name="select_target_gender">Select Target Gender</string>
    <string name="select_target_call_to_action">Select Target Call to Action</string>
    <string name="select_duration_weeks">Select Duration (Weeks)</string>
    <string name="select_target_phone_type">Select Target Phone Type</string>
    <string name="enter_event_location">Enter Event Location</string>
    <string name="enter_event_ticket_links">Enter Event Ticket Links</string>
    <string name="enter_event_summary">Enter Event Summary</string>
    <string name="enter_event_title">Enter Event Title</string>
    <string name="create_event">Create Event</string>
    <string name="enter_ad_web_link">Enter Ad Web Link</string>
    <string name="enter_short_ad_summary">Enter Short Ad Summary</string>
    <string name="enter_ad_title">Enter Ad Title</string>
    <string name="select_brand_color">Select Brand Color</string>
    <string name="select_brand">Select Brand</string>
    <string name="create_ad">Create Ad</string>
    <string name="fanatics">Fanatics</string>
    <string name="create_brand">Create Brand</string>
    <string name="step_1">Step 1</string>
    <string name="chat_room">Chatroom</string>
    <string name="menu_projects">Projects</string>
    <string name="create_project">Create Project</string>
    <string name="industry_category">Industry Category</string>
    <string name="select_task_type">Select Task Type</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="select_partner_brand_size">Select Partner Brand Size</string>
    <string name="select_location">Select Location</string>
    <string name="child_forced_labour">Child/Forced Labour</string>
    <string name="carbon_footprint">Carbon Footprint</string>
    <string name="deforestation_score">Deforestation Score</string>
    <string name="biodiversity_score">Biodiversity Score</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="waste_score">Waste Score</string>
    <string name="community_score">Community Score</string>
    <string name="climate_score">Climate Score</string>
    <string name="nature_score">Nature Score</string>
    <string name="create_product">Create Product</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_batch_number">Enter Batch Number</string>
    <string name="enter_product_summary">Enter Product Summary</string>

    <string name="steps">Step %s</string>
    <string name="check_sustainability">Check Sustainability</string>
    <string name="_4_5">(%.0f/5)</string>


</resources>
