<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="8dp"
    android:layout_margin="@dimen/dimen_8"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/cover_image"
                android:src="@drawable/cover"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="2:1"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/padd_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_toStartOf="@id/linearLayout"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:maxLines="1"
                    android:layout_marginEnd="@dimen/padd_10"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/app_name"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_marginStart="@dimen/dimen_10"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:visibility="invisible"
                        android:rating="4"
                        android:numStars="5"
                        android:progressTint="@color/colorGreen"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/_4_5"
                        android:id="@+id/ratingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>


            <View
                android:background="@color/colorGray"
                android:layout_marginBottom="@dimen/padd_10"
                android:layout_marginTop="@dimen/padd_10"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/slogan_one"
                android:id="@+id/subTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/dimen_12"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans_semibold"
                android:background="@drawable/primary_background_button"
                android:textColor="@color/colorWhite"
                android:text="@string/check_sustainability"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>